[tool.poetry]
name = "wbx_tools"
version = "0.1.0"
description = ""
authors = ["CaptainBloodborne <vrail30@gmail.com>"]
readme = "README.md"
packages = [{include = "wbx_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
